--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ h6 {
   margin-bottom: 1.5em;
 }
 .main-content{
-  padding-top:30px; 
+  padding-top:60px; 
 }
 .btn-primary {
   display: inline-block;
@@ -103,8 +103,8 @@ h6 {
   top: 0;
   left: 0;
   width: 100%;
-  height: 15;
-  padding: 0.75rem 2rem;
+  height: 10;
+  padding: 0.75rem 1rem;
   background: white;
   z-index: 1;
 }
@@ -200,13 +200,13 @@ h6 {
 .defaultHero,
 .roomsHero {
   min-height: calc(80vh - 46px);
-  background: url("./images/tile-blue1.jpeg") center/cover no-repeat;
+  background: url("./images/room-2.jpeg") center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .roomsHero {
-  background-image: url("./images/tile-brown-design1.jpeg");
+  background-image: url("./images/room-3.jpeg");
   min-height: 60vh;
 }
 .dynamic-hero {
@@ -219,7 +219,7 @@ h6 {
 }
 .servicesHero {
   min-height: calc(70vh - 46px);
-  background: url("./images/tile-brown1.jpeg") center/cover no-repeat;
+  background: url("./images/room-5.jpeg") center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
