--- a/src/App.css
+++ b/src/App.css
@@ -191,6 +191,22 @@ h6 {
   }
 }
 /* end of navbar */
+/*footer*/
+.footer{
+  position: relative;
+  top: 0;
+
+  width: 100%;
+  height: 10;
+  padding: 0.75rem 1rem;
+  background:white;
+ 
+}
+@media screen and (min-width: 768px){
+  .footer{
+    left: 90%;
+  }
+}
 /* Hero */
 .home-hero {
   
@@ -226,7 +242,17 @@ h6 {
 }
 /* End of Hero */
 /* Banner */
+@keyframes banner {
+  to {
+    opacity: 1;
+  }
+}
+
+
 .banner {
+  opacity: 0;
+  animation: 0s linear 2.1s forwards banner ;
+  animation-duration: 4s;
   display: inline-block;
   background: rgba(0, 0, 0, 0.5);
   color: var(--mainWhite);
@@ -247,6 +273,15 @@ h6 {
 .banner p {
   font-size: 1.2rem;
   margin-bottom: 2rem;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 @media screen and (min-width: 576px) {
   .banner {
